fix jumpy infinite scroll issue

--- a/src/stylesheets/layout/_gallery.scss
+++ b/src/stylesheets/layout/_gallery.scss
@@ -14,30 +14,17 @@
   margin: 15px 0;
 }
 
-// .gallery-thumbnail__image {
-//   object-fit: cover;
-//   height: 400px;
-//   width: 100%;
-//   display: block;
-//   margin: 7px;
-// }
-
 .dashboard-header {
   border-bottom: 1px solid #696969;
   padding-bottom: 15px;
 }
 
-// .gallery-thumbnail__image {
-//   width: 20%;
-//   padding-bottom: 25px;
-// }
-
 .grid-sizer {
-  width: 30%;
+  width: 20%;
 }
 
 .grid-item {
-  width: 30%;
+  width: 20%;
   margin-bottom: 2%;
   &:hover {
     opacity: 0.7;
@@ -45,5 +32,5 @@
 }
 
 .gutter-sizer {
-  width: 7%;
+  width: 10%;
 }
